--- a/assets/css/base/form.scss
+++ b/assets/css/base/form.scss
@@ -10,10 +10,13 @@ input {
   display: block;
   font-size: $font-size-s;
   height: 40px;
-  margin-bottom: 20px;
   padding: 0 15px;
   outline: none;
   width: 100%;
+}
+
+.input-box {
+  margin-bottom: 20px;
 }
 
 .btn {
